[package]
name = "graf"
version = "0.1.0"
authors = ["Niklas Jonsson <niklas.jonsson@ubisoft.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
movingai = "1.1.1"
clap = { version = "4.1.4", features = ["derive"] }
